# Image-Segmentation

./: CMakeLists.txt  README.md  dependencies.sh  main.cpp  test_main.cpp
